@@ -12,9 +12,7 @@ import io.sirix.index.IndexType;
 import io.sirix.index.SearchMode;
 import io.sirix.index.redblacktree.keyvalue.CASValue;
 import io.sirix.index.redblacktree.keyvalue.NodeReferences;
-import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -28,51 +26,37 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Microbenchmarks for {@link HOTIndexWriter} and {@link HOTIndexReader} that bypass Sirix's
- * JSON-shredder + document-node-creation overhead. The goal is to measure pure HOT cost
- * (key encoding + page CoW + PEXT-routed descent + leaf put/get) in isolation — comparable
- * in shape to Binna's reference C++ microbenchmark numbers.
+ * JSON-shredder + document-node-creation overhead. The goal is to measure pure HOT cost (key
+ * encoding + page CoW + PEXT-routed descent + leaf put/get) in isolation — comparable in shape to
+ * Binna's reference C++ microbenchmark numbers.
  *
- * <p>Tests are {@code @Disabled} by default so they don't pollute the regular suite. Enable
- * a specific test method to measure throughput. Each test prints:
+ * <p>
+ * Tests are {@code @Disabled} by default so they don't pollute the regular suite. Enable a specific
+ * test method to measure throughput. Each test prints:
  * <ul>
- *   <li>operations/second</li>
- *   <li>average per-op latency in nanoseconds</li>
- *   <li>p50 / p99 latencies (sampled)</li>
+ * <li>operations/second</li>
+ * <li>average per-op latency in nanoseconds</li>
+ * <li>p50 / p99 latencies (sampled)</li>
  * </ul>
  *
- * <p>Workload notes:
+ * <p>
+ * Workload notes:
  * <ul>
- *   <li>Keys are built directly as {@link CASValue} for {@link Int32} — bypassing JSON.</li>
- *   <li>Values are minimal {@link NodeReferences} containing one {@link Roaring64Bitmap} bit.</li>
- *   <li>{@link HOTIndexWriter#index} is invoked in a tight loop. The loop time excludes
- *       database open and index-controller setup.</li>
- *   <li>For reads: keys are looked up via {@link HOTIndexReader#get} after a single commit.</li>
+ * <li>Keys are built directly as {@link CASValue} for {@link Int32} — bypassing JSON.</li>
+ * <li>Values are minimal {@link NodeReferences} containing one {@link Roaring64Bitmap} bit.</li>
+ * <li>{@link HOTIndexWriter#index} is invoked in a tight loop. The loop time excludes database open
+ * and index-controller setup.</li>
+ * <li>For reads: keys are looked up via {@link HOTIndexReader#get} after a single commit.</li>
  * </ul>
  *
- * <p><b>Important caveat</b>: even this microbenchmark still goes through Sirix's TIL/CoW
- * machinery (every {@code index()} call may trigger {@code log.put} for a CoW'd page) and
- * the persistent storage layer. A pure in-memory HOT (Binna's reference) would not have
- * these costs. The numbers therefore upper-bound HOT cost in Sirix's persistent context.
+ * <p>
+ * <b>Important caveat</b>: even this microbenchmark still goes through Sirix's TIL/CoW machinery
+ * (every {@code index()} call may trigger {@code log.put} for a CoW'd page) and the persistent
+ * storage layer. A pure in-memory HOT (Binna's reference) would not have these costs. The numbers
+ * therefore upper-bound HOT cost in Sirix's persistent context.
  */
 @DisplayName("HOT microbenchmarks")
 final class HOTMicrobenchmark {
-
-  private static String originalHOTSetting;
-
-  @BeforeAll
-  static void enableHOT() {
-    originalHOTSetting = System.getProperty("sirix.index.useHOT");
-    System.setProperty("sirix.index.useHOT", "true");
-  }
-
-  @AfterAll
-  static void restoreHOT() {
-    if (originalHOTSetting != null) {
-      System.setProperty("sirix.index.useHOT", originalHOTSetting);
-    } else {
-      System.clearProperty("sirix.index.useHOT");
-    }
-  }
 
   @BeforeEach
   void setUp() {
@@ -92,7 +76,8 @@ final class HOTMicrobenchmark {
    * Measures pure HOT write throughput by driving {@link HOTIndexWriter#index} directly with
    * pre-built CAS keys + 1-bit NodeReferences. No JSON shredding, no document node creation.
    *
-   * <p>JVM warmup: 10K iterations before the timed loop so JIT compiles the hot path.
+   * <p>
+   * JVM warmup: 10K iterations before the timed loop so JIT compiles the hot path.
    */
   @Test
   @DisplayName("HOT writer — insert throughput (CAS Int32, N=200K)")
@@ -108,18 +93,13 @@ final class HOTMicrobenchmark {
       // Create the index up front so its root reference exists.
       final var ic = session.getWtxIndexController(trx.getRevisionNumber());
       final var pathToValue =
-          io.brackit.query.util.path.Path.parse("/x/[]/v",
-              io.brackit.query.util.path.PathParser.Type.JSON);
-      final IndexDef casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-          Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          io.brackit.query.util.path.Path.parse("/x/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+      final IndexDef casIndexDef =
+          IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
       ic.createIndexes(Set.of(casIndexDef), trx);
 
-      final var writer =
-          io.sirix.index.hot.HOTIndexWriter.create(
-              trx.getStorageEngineWriter(),
-              io.sirix.index.hot.CASKeySerializer.INSTANCE,
-              IndexType.CAS,
-              casIndexDef.getID());
+      final var writer = io.sirix.index.hot.HOTIndexWriter.create(trx.getStorageEngineWriter(),
+          io.sirix.index.hot.CASKeySerializer.INSTANCE, IndexType.CAS, casIndexDef.getID());
 
       // Warmup
       final NodeReferences scratchValue = new NodeReferences();
@@ -127,7 +107,7 @@ final class HOTMicrobenchmark {
         scratchValue.getNodeKeys().clear();
         scratchValue.getNodeKeys().add(i);
         final CASValue key = new CASValue(new Int32(i), Type.INR, pathNodeKey);
-        writer.index(key, scratchValue, null);
+        writer.index(key, scratchValue);
       }
 
       // Timed loop
@@ -136,16 +116,16 @@ final class HOTMicrobenchmark {
         scratchValue.getNodeKeys().clear();
         scratchValue.getNodeKeys().add(i);
         final CASValue key = new CASValue(new Int32(i), Type.INR, pathNodeKey);
-        writer.index(key, scratchValue, null);
+        writer.index(key, scratchValue);
       }
       final long elapsedNs = System.nanoTime() - start;
       trx.commit();
 
       final double throughput = (double) n * 1e9 / elapsedNs;
       final double avgLatencyNs = (double) elapsedNs / n;
-      System.out.println(String.format(
-          "[microbench] HOT.index CAS Int32 N=%d · %.0f ops/sec · %.0f ns/op · total=%.2f ms · warmup=%d",
-          n, throughput, avgLatencyNs, elapsedNs / 1e6, warmup));
+      System.out.println(
+          String.format("[microbench] HOT.index CAS Int32 N=%d · %.0f ops/sec · %.0f ns/op · total=%.2f ms · warmup=%d",
+              n, throughput, avgLatencyNs, elapsedNs / 1e6, warmup));
       assertTrue(throughput > 0);
     }
   }
@@ -155,9 +135,8 @@ final class HOTMicrobenchmark {
   // ============================================================================================
 
   /**
-   * Measures pure HOT read (point lookup) throughput by driving {@link HOTIndexReader#get}
-   * directly. Builds an index with N entries first (untimed), then runs M random point
-   * lookups (timed).
+   * Measures pure HOT read (point lookup) throughput by driving {@link HOTIndexReader#get} directly.
+   * Builds an index with N entries first (untimed), then runs M random point lookups (timed).
    */
   @Test
   @DisplayName("HOT reader — point lookup throughput (CAS Int32, N=200K, M=100K)")
@@ -174,34 +153,28 @@ final class HOTMicrobenchmark {
       // 1. Build index (untimed).
       final var ic = session.getWtxIndexController(trx.getRevisionNumber());
       final var pathToValue =
-          io.brackit.query.util.path.Path.parse("/x/[]/v",
-              io.brackit.query.util.path.PathParser.Type.JSON);
-      final IndexDef casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-          Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+          io.brackit.query.util.path.Path.parse("/x/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+      final IndexDef casIndexDef =
+          IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
       ic.createIndexes(Set.of(casIndexDef), trx);
-      final var writer = io.sirix.index.hot.HOTIndexWriter.create(
-          trx.getStorageEngineWriter(),
-          io.sirix.index.hot.CASKeySerializer.INSTANCE,
-          IndexType.CAS, casIndexDef.getID());
+      final var writer = io.sirix.index.hot.HOTIndexWriter.create(trx.getStorageEngineWriter(),
+          io.sirix.index.hot.CASKeySerializer.INSTANCE, IndexType.CAS, casIndexDef.getID());
       final NodeReferences scratch = new NodeReferences();
       for (int i = 0; i < n; i++) {
         scratch.getNodeKeys().clear();
         scratch.getNodeKeys().add(i);
-        writer.index(new CASValue(new Int32(i), Type.INR, pathNodeKey), scratch, null);
+        writer.index(new CASValue(new Int32(i), Type.INR, pathNodeKey), scratch);
       }
       trx.commit();
 
       // 2. Open reader + warmup.
-      final var reader = io.sirix.index.hot.HOTIndexReader.create(
-          trx.getStorageEngineReader(),
-          io.sirix.index.hot.CASKeySerializer.INSTANCE,
-          IndexType.CAS, casIndexDef.getID());
+      final var reader = io.sirix.index.hot.HOTIndexReader.create(trx.getStorageEngineReader(),
+          io.sirix.index.hot.CASKeySerializer.INSTANCE, IndexType.CAS, casIndexDef.getID());
 
       final java.util.SplittableRandom rng = new java.util.SplittableRandom(0xCAFEBABEL);
       for (int i = 0; i < warmup; i++) {
         final int v = rng.nextInt(n);
-        final NodeReferences res = reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey),
-            SearchMode.EQUAL);
+        final NodeReferences res = reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey), SearchMode.EQUAL);
         if (res == null) {
           throw new AssertionError("warmup miss for v=" + v);
         }
@@ -212,16 +185,15 @@ final class HOTMicrobenchmark {
       final long start = System.nanoTime();
       for (int i = 0; i < m; i++) {
         final int v = rng.nextInt(n);
-        final NodeReferences res = reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey),
-            SearchMode.EQUAL);
-        if (res != null) hits++;
+        final NodeReferences res = reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey), SearchMode.EQUAL);
+        if (res != null)
+          hits++;
       }
       final long elapsedNs = System.nanoTime() - start;
 
       final double throughput = (double) m * 1e9 / elapsedNs;
       final double avgLatencyNs = (double) elapsedNs / m;
-      System.out.println(String.format(
-          "[microbench] HOT.get  CAS Int32 N=%d M=%d hits=%d · %.0f ops/sec · %.0f ns/op",
+      System.out.println(String.format("[microbench] HOT.get  CAS Int32 N=%d M=%d hits=%d · %.0f ops/sec · %.0f ns/op",
           n, m, hits, throughput, avgLatencyNs));
       assertTrue(hits > m * 0.95, "expected > 95%% hit rate, got " + hits + "/" + m);
     }
@@ -232,8 +204,8 @@ final class HOTMicrobenchmark {
   // ============================================================================================
 
   /**
-   * Combined microbenchmark: insert N entries, commit, then perform M point lookups. Reports
-   * both numbers in one run. Useful for quick before/after profiling.
+   * Combined microbenchmark: insert N entries, commit, then perform M point lookups. Reports both
+   * numbers in one run. Useful for quick before/after profiling.
    */
   @Test
   @DisplayName("HOT writer+reader combined microbench (CAS Int32, profile-friendly N)")
@@ -242,124 +214,118 @@ final class HOTMicrobenchmark {
     final String prevStrictBinna = System.getProperty("hot.strict.binna");
     System.setProperty("hot.strict.binna", "true");
     try {
-    final int n = 500_000;
-    final int m = 1_000_000;
-    final long pathNodeKey = 5L;
-    final var database = JsonTestHelper.getDatabase(JsonTestHelper.PATHS.PATH1.getFile());
-    final IndexDef casIndexDef;
-    final long writeNs;
+      final int n = 500_000;
+      final int m = 1_000_000;
+      final long pathNodeKey = 5L;
+      final var database = JsonTestHelper.getDatabase(JsonTestHelper.PATHS.PATH1.getFile());
+      final IndexDef casIndexDef;
+      final long writeNs;
 
-    try (final var session = database.beginResourceSession(JsonTestHelper.RESOURCE);
-        final var trx = session.beginNodeTrx()) {
-      final var ic = session.getWtxIndexController(trx.getRevisionNumber());
-      final var pathToValue =
-          io.brackit.query.util.path.Path.parse("/x/[]/v",
-              io.brackit.query.util.path.PathParser.Type.JSON);
-      casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-          Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
-      ic.createIndexes(Set.of(casIndexDef), trx);
-      final var writer = io.sirix.index.hot.HOTIndexWriter.create(
-          trx.getStorageEngineWriter(),
-          io.sirix.index.hot.CASKeySerializer.INSTANCE,
-          IndexType.CAS, casIndexDef.getID());
-      final NodeReferences scratch = new NodeReferences();
+      try (final var session = database.beginResourceSession(JsonTestHelper.RESOURCE);
+          final var trx = session.beginNodeTrx()) {
+        final var ic = session.getWtxIndexController(trx.getRevisionNumber());
+        final var pathToValue =
+            io.brackit.query.util.path.Path.parse("/x/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+        casIndexDef =
+            IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+        ic.createIndexes(Set.of(casIndexDef), trx);
+        final var writer = io.sirix.index.hot.HOTIndexWriter.create(trx.getStorageEngineWriter(),
+            io.sirix.index.hot.CASKeySerializer.INSTANCE, IndexType.CAS, casIndexDef.getID());
+        final NodeReferences scratch = new NodeReferences();
 
-      // Warmup writes — use disjoint Int32 range so they don't pollute the measured set.
-      final int warmupBase = n + 1_000_000;
-      for (int i = 0; i < 5_000; i++) {
-        scratch.getNodeKeys().clear();
-        scratch.getNodeKeys().add(warmupBase + i);
-        writer.index(new CASValue(new Int32(warmupBase + i), Type.INR, pathNodeKey), scratch, null);
+        // Warmup writes — use disjoint Int32 range so they don't pollute the measured set.
+        final int warmupBase = n + 1_000_000;
+        for (int i = 0; i < 5_000; i++) {
+          scratch.getNodeKeys().clear();
+          scratch.getNodeKeys().add(warmupBase + i);
+          writer.index(new CASValue(new Int32(warmupBase + i), Type.INR, pathNodeKey), scratch);
+        }
+
+        final long writeStart = System.nanoTime();
+        for (int i = 0; i < n; i++) {
+          scratch.getNodeKeys().clear();
+          scratch.getNodeKeys().add(i);
+          writer.index(new CASValue(new Int32(i), Type.INR, pathNodeKey), scratch);
+        }
+        writeNs = System.nanoTime() - writeStart;
+        trx.commit();
       }
 
-      final long writeStart = System.nanoTime();
-      for (int i = 0; i < n; i++) {
-        scratch.getNodeKeys().clear();
-        scratch.getNodeKeys().add(i);
-        writer.index(new CASValue(new Int32(i), Type.INR, pathNodeKey), scratch, null);
-      }
-      writeNs = System.nanoTime() - writeStart;
-      trx.commit();
-    }
+      // Reads from a fresh RTX so we see the committed on-disk state, not the writer's TIL.
+      long hits = 0;
+      final long readNs;
+      try (final var session = database.beginResourceSession(JsonTestHelper.RESOURCE);
+          final var rtx = session.beginNodeReadOnlyTrx()) {
+        final var reader = io.sirix.index.hot.HOTIndexReader.create(rtx.getStorageEngineReader(),
+            io.sirix.index.hot.CASKeySerializer.INSTANCE, IndexType.CAS, casIndexDef.getID());
 
-    // Reads from a fresh RTX so we see the committed on-disk state, not the writer's TIL.
-    long hits = 0;
-    final long readNs;
-    try (final var session = database.beginResourceSession(JsonTestHelper.RESOURCE);
-        final var rtx = session.beginNodeReadOnlyTrx()) {
-      final var reader = io.sirix.index.hot.HOTIndexReader.create(
-          rtx.getStorageEngineReader(),
-          io.sirix.index.hot.CASKeySerializer.INSTANCE,
-          IndexType.CAS, casIndexDef.getID());
+        // Diagnostic 1: structural validator on this microbench's trie.
+        final HOTInvariantValidator.Result inv =
+            HOTInvariantValidator.validateIndex(rtx.getStorageEngineReader(), IndexType.CAS, casIndexDef.getID());
+        System.out.println("[microbench/diagnostic] validator: storedKeys=" + inv.storedKeyCount() + " observedHeight="
+            + inv.observedHeight() + " violations=" + inv.violations().size());
+        // Print first 5 violations (truncate to avoid log flood).
+        int printed = 0;
+        for (final var viol : inv.violations()) {
+          if (printed++ >= 5)
+            break;
+          System.out.println("[microbench/diagnostic] " + viol);
+        }
 
-      // Diagnostic 1: structural validator on this microbench's trie.
-      final HOTInvariantValidator.Result inv =
-          HOTInvariantValidator.validateIndex(rtx.getStorageEngineReader(), IndexType.CAS,
-              casIndexDef.getID());
-      System.out.println("[microbench/diagnostic] validator: storedKeys=" + inv.storedKeyCount()
-          + " observedHeight=" + inv.observedHeight() + " violations=" + inv.violations().size());
-      // Print first 5 violations (truncate to avoid log flood).
-      int printed = 0;
-      for (final var viol : inv.violations()) {
-        if (printed++ >= 5) break;
-        System.out.println("[microbench/diagnostic] " + viol);
-      }
-
-      // Diagnostic 2: scan EVERY inserted value, count misses, print first 20 missing values.
-      int totalMisses = 0;
-      final StringBuilder missList = new StringBuilder();
-      for (int v = 0; v < n; v++) {
-        if (reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey), SearchMode.EQUAL)
-            == null) {
-          if (totalMisses < 20) {
-            if (missList.length() > 0) missList.append(',');
-            missList.append(v);
+        // Diagnostic 2: scan EVERY inserted value, count misses, print first 20 missing values.
+        int totalMisses = 0;
+        final StringBuilder missList = new StringBuilder();
+        for (int v = 0; v < n; v++) {
+          if (reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey), SearchMode.EQUAL) == null) {
+            if (totalMisses < 20) {
+              if (missList.length() > 0)
+                missList.append(',');
+              missList.append(v);
+            }
+            totalMisses++;
           }
-          totalMisses++;
         }
-      }
-      System.out.println("[microbench/diagnostic] full-scan misses=" + totalMisses + "/" + n
-          + " first20=[" + missList + "]");
+        System.out.println(
+            "[microbench/diagnostic] full-scan misses=" + totalMisses + "/" + n + " first20=[" + missList + "]");
 
-      // Warmup reads — count hits, don't assert (we'll measure throughput regardless).
-      final java.util.SplittableRandom rng = new java.util.SplittableRandom(42L);
-      int warmupHits = 0;
-      for (int i = 0; i < 5_000; i++) {
-        if (reader.get(new CASValue(new Int32(rng.nextInt(n)), Type.INR, pathNodeKey),
-            SearchMode.EQUAL) != null) {
-          warmupHits++;
+        // Warmup reads — count hits, don't assert (we'll measure throughput regardless).
+        final java.util.SplittableRandom rng = new java.util.SplittableRandom(42L);
+        int warmupHits = 0;
+        for (int i = 0; i < 5_000; i++) {
+          if (reader.get(new CASValue(new Int32(rng.nextInt(n)), Type.INR, pathNodeKey), SearchMode.EQUAL) != null) {
+            warmupHits++;
+          }
         }
-      }
-      System.out.println("[microbench] warmup hits=" + warmupHits + "/5000");
+        System.out.println("[microbench] warmup hits=" + warmupHits + "/5000");
 
-      final long readStart = System.nanoTime();
-      for (int i = 0; i < m; i++) {
-        final int v = rng.nextInt(n);
-        final NodeReferences r =
-            reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey), SearchMode.EQUAL);
-        if (r != null) hits++;
+        final long readStart = System.nanoTime();
+        for (int i = 0; i < m; i++) {
+          final int v = rng.nextInt(n);
+          final NodeReferences r = reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey), SearchMode.EQUAL);
+          if (r != null)
+            hits++;
+        }
+        readNs = System.nanoTime() - readStart;
       }
-      readNs = System.nanoTime() - readStart;
-    }
 
-    System.out.println(String.format(
-        "[microbench] writes N=%d · %.0f ops/sec · %.0f ns/op · total=%.1f ms",
-        n, n * 1e9 / writeNs, (double) writeNs / n, writeNs / 1e6));
-    System.out.println(String.format(
-        "[microbench] reads  M=%d (hits=%d) · %.0f ops/sec · %.0f ns/op · total=%.1f ms",
-        m, hits, m * 1e9 / readNs, (double) readNs / m, readNs / 1e6));
+      System.out.println(String.format("[microbench] writes N=%d · %.0f ops/sec · %.0f ns/op · total=%.1f ms", n,
+          n * 1e9 / writeNs, (double) writeNs / n, writeNs / 1e6));
+      System.out.println(String.format("[microbench] reads  M=%d (hits=%d) · %.0f ops/sec · %.0f ns/op · total=%.1f ms",
+          m, hits, m * 1e9 / readNs, (double) readNs / m, readNs / 1e6));
     } finally {
-      if (prevStrictBinna == null) System.clearProperty("hot.strict.binna");
-      else System.setProperty("hot.strict.binna", prevStrictBinna);
+      if (prevStrictBinna == null)
+        System.clearProperty("hot.strict.binna");
+      else
+        System.setProperty("hot.strict.binna", prevStrictBinna);
     }
   }
 
   /**
-   * Minimal reproducer for the chunked-bitmap read bug: insert N values straddling the
-   * chunkIdx=0/1 boundary (65536), no warmup, then read each one back. The expectation is
-   * that {@code reader.get(prefix(v))} succeeds for every {@code v} in {@code [0, N)} even
-   * when chunkIdx differs across the range. A failure here points at lowerBound's walk-up
-   * not handling non-existent {@code prefix(v) || 0} composite keys.
+   * Minimal reproducer for the chunked-bitmap read bug: insert N values straddling the chunkIdx=0/1
+   * boundary (65536), no warmup, then read each one back. The expectation is that
+   * {@code reader.get(prefix(v))} succeeds for every {@code v} in {@code [0, N)} even when chunkIdx
+   * differs across the range. A failure here points at lowerBound's walk-up not handling non-existent
+   * {@code prefix(v) || 0} composite keys.
    */
   @Test
   @DisplayName("HOT read straddling chunkIdx boundary (N=70K, no warmup)")
@@ -373,20 +339,18 @@ final class HOTMicrobenchmark {
     try (final var session = database.beginResourceSession(JsonTestHelper.RESOURCE);
         final var trx = session.beginNodeTrx()) {
       final var ic = session.getWtxIndexController(trx.getRevisionNumber());
-      final var pathToValue = io.brackit.query.util.path.Path.parse("/x/[]/v",
-          io.brackit.query.util.path.PathParser.Type.JSON);
-      casIndexDef = IndexDefs.createCASIdxDef(false, Type.INR,
-          Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
+      final var pathToValue =
+          io.brackit.query.util.path.Path.parse("/x/[]/v", io.brackit.query.util.path.PathParser.Type.JSON);
+      casIndexDef =
+          IndexDefs.createCASIdxDef(false, Type.INR, Collections.singleton(pathToValue), 0, IndexDef.DbType.JSON);
       ic.createIndexes(Set.of(casIndexDef), trx);
-      final var writer = io.sirix.index.hot.HOTIndexWriter.create(
-          trx.getStorageEngineWriter(),
-          io.sirix.index.hot.CASKeySerializer.INSTANCE,
-          IndexType.CAS, casIndexDef.getID());
+      final var writer = io.sirix.index.hot.HOTIndexWriter.create(trx.getStorageEngineWriter(),
+          io.sirix.index.hot.CASKeySerializer.INSTANCE, IndexType.CAS, casIndexDef.getID());
       final NodeReferences scratch = new NodeReferences();
       for (int i = 0; i < n; i++) {
         scratch.getNodeKeys().clear();
         scratch.getNodeKeys().add(i);
-        writer.index(new CASValue(new Int32(i), Type.INR, pathNodeKey), scratch, null);
+        writer.index(new CASValue(new Int32(i), Type.INR, pathNodeKey), scratch);
       }
       trx.commit();
     }
@@ -396,22 +360,21 @@ final class HOTMicrobenchmark {
     int firstMissChunk1 = -1;
     try (final var session = database.beginResourceSession(JsonTestHelper.RESOURCE);
         final var rtx = session.beginNodeReadOnlyTrx()) {
-      final var reader = io.sirix.index.hot.HOTIndexReader.create(
-          rtx.getStorageEngineReader(), io.sirix.index.hot.CASKeySerializer.INSTANCE,
-          IndexType.CAS, casIndexDef.getID());
+      final var reader = io.sirix.index.hot.HOTIndexReader.create(rtx.getStorageEngineReader(),
+          io.sirix.index.hot.CASKeySerializer.INSTANCE, IndexType.CAS, casIndexDef.getID());
       for (int v = 0; v < n; v++) {
-        if (reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey),
-            SearchMode.EQUAL) == null) {
+        if (reader.get(new CASValue(new Int32(v), Type.INR, pathNodeKey), SearchMode.EQUAL) == null) {
           misses++;
-          if (v < 65536 && firstMissChunk0 < 0) firstMissChunk0 = v;
-          if (v >= 65536 && firstMissChunk1 < 0) firstMissChunk1 = v;
+          if (v < 65536 && firstMissChunk0 < 0)
+            firstMissChunk0 = v;
+          if (v >= 65536 && firstMissChunk1 < 0)
+            firstMissChunk1 = v;
         }
       }
     }
-    System.out.println("[reproducer] N=" + n + " misses=" + misses
-        + " firstMissChunk0=" + firstMissChunk0
+    System.out.println("[reproducer] N=" + n + " misses=" + misses + " firstMissChunk0=" + firstMissChunk0
         + " firstMissChunk1=" + firstMissChunk1);
-    assertTrue(misses == 0, "expected zero misses, got " + misses
-        + " (firstMissChunk0=" + firstMissChunk0 + ", firstMissChunk1=" + firstMissChunk1 + ")");
+    assertTrue(misses == 0, "expected zero misses, got " + misses + " (firstMissChunk0=" + firstMissChunk0
+        + ", firstMissChunk1=" + firstMissChunk1 + ")");
   }
 }
